[metadata]
name = pyg-base
version = 0.0.1
author = Yoav Git
author_email = yoav.git@gmail.com
description = Utilities for data manipulation including creation of DAGs and tables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gityoav/pyg-base
project_urls =
    Bug Tracker = https://github.com/gityoav/pyg-base/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = numpy>=1.19.1; scipy>=1.5.0; pandas>=1.1.0; jsonpickle>=1.2; fastparquet>=0.4.1

[options.packages.find]
where = src